# Proyecto1_Scrabble

./: CMakeLists.txt  Diagramas UML  README.md  main.cpp  principal.cpp  principal.h  test.cpp
InterfazGrafica/: InterfazGrafica.pro  InterfazGrafica.pro.user.e2638d2.4.8-pre1  helloworld.cpp  helloworld.h  helloworld.ui  imagenes.qrc  jsonComm.h  jsoncomm.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodoespecial.cpp  opcionregistro.cpp  opcionregistro.h  pantallaespera.cpp  pantallaespera.h  pantallaespera.ui  pantallaespera.ui.autosave  principal.cpp  principal.h  registrojugador1.cpp  registrojugador1.h  registrojugador2.cpp  registrojugador2.ui  secondwindow.ui  socketclient.cpp  socketclient.h  tablerodejuego.cpp  tablerodejuego.h  tablerodejuego.ui  util.cpp  util.h
client/: helloworld.cpp  helloworld.h  helloworld.ui  list.cpp  list.h  main.cpp  node.h  prueba1helloworld.pro  prueba1helloworld.pro.user.4.8-pre1
communication/: oldSS.cpp  socketClient.cpp  socketClient.h  socketServer.cpp  socketServer.h
gameInterface/: gameBoard.cpp  gameBoard.h  helloworld.cpp  helloworld.h  main.cpp
gameLogic/: chips.cpp  chips.h  chipsManager.cpp  chipsManager.h  connectExpert.cpp  connectExpert.h  gameBoard.cpp  gameBoard.h  gameController.cpp  gameController.h  letters.cpp  letters.h  player.cpp  player.h  principal.cpp  principal.h  util.cpp  util.h  words.cpp  words.h  wordsManager.cpp  wordsManager.h
html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _dart_configuration_8tcl.html  _proyecto1___scrabble__autogen_2_g_s_p_t_r_p_m_y_d_d_2moc__mainwindow_8cpp.html  _proyecto1___scrabble__autogen_2_l2_l_w_z5_k_s_s_n_2moc__mainwindow_8cpp.html  _proyecto1___scrabble__autogen_2_v4_t_l2_c_s_w_t_b_2moc__mainwindow_8cpp.html  _proyecto1___scrabble__autogen_2_y_w_h_h_f_x6263_2moc__mainwindow_8cpp.html  _proyecto1___scrabble__autogen_2include_2ui__mainwindow_8h.html  _proyecto1___scrabble__autogen_2include_2ui__mainwindow_8h_source.html  _proyecto1___scrabble__autogen_2moc__predefs_8h.html  _proyecto1___scrabble__autogen_2moc__predefs_8h_source.html  _proyecto1___scrabble__autogen_2mocs__compilation_8cpp.html  _r_e_a_d_m_e_8md.html  _tablas_01de_01historias_01de_01usuario_2_r_e_a_d_m_e_8md.html  allocators_8h.html  allocators_8h_source.html  annotated.html  biginteger_8h.html  biginteger_8h_source.html  chips_8cpp.html  chips_8h.html  chips_8h_source.html  chips_manager_8cpp.html  chips_manager_8h.html  chips_manager_8h_source.html  class_auto_u_t_f_input_stream-members.html  class_auto_u_t_f_input_stream.html  class_auto_u_t_f_output_stream-members.html  class_auto_u_t_f_output_stream.html  class_basic_i_stream_wrapper-members.html  class_basic_i_stream_wrapper.html  class_basic_o_stream_wrapper-members.html  class_basic_o_stream_wrapper.html  class_configure_file-members.html  class_configure_file.html  class_crt_allocator-members.html  class_crt_allocator.html  class_cursor_stream_wrapper-members.html  class_cursor_stream_wrapper.html  class_encoded_input_stream-members.html  (+703 more)
latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _dart_configuration_8tcl.tex  _proyecto1___scrabble__autogen_2_g_s_p_t_r_p_m_y_d_d_2moc__mainwindow_8cpp.tex  _proyecto1___scrabble__autogen_2_l2_l_w_z5_k_s_s_n_2moc__mainwindow_8cpp.tex  _proyecto1___scrabble__autogen_2_v4_t_l2_c_s_w_t_b_2moc__mainwindow_8cpp.tex  _proyecto1___scrabble__autogen_2_y_w_h_h_f_x6263_2moc__mainwindow_8cpp.tex  _proyecto1___scrabble__autogen_2include_2ui__mainwindow_8h.tex  _proyecto1___scrabble__autogen_2moc__predefs_8h.tex  _proyecto1___scrabble__autogen_2mocs__compilation_8cpp.tex  _tablas_01de_01historias_01de_01usuario_2_r_e_a_d_m_e_8md.tex  allocators_8h.tex  annotated.tex  biginteger_8h.tex  chips_8cpp.tex  chips_8h.tex  chips_manager_8cpp.tex  chips_manager_8h.tex  class_auto_u_t_f_input_stream.tex  class_auto_u_t_f_output_stream.tex  class_basic_i_stream_wrapper.tex  class_basic_o_stream_wrapper.tex  class_crt_allocator.tex  class_cursor_stream_wrapper.tex  class_encoded_input_stream.tex  class_encoded_input_stream_3_01_u_t_f8_3_4_00_01_memory_stream_01_4.tex  class_encoded_output_stream.tex  class_file_read_stream.tex  class_file_write_stream.tex  class_generic_array.tex  class_generic_document.tex  class_generic_member_iterator.tex  class_generic_object.tex  class_generic_pointer.tex  class_generic_pointer_1_1_percent_encode_stream.tex  class_generic_reader.tex  class_generic_schema_document.tex  class_generic_schema_validator.eps  class_generic_schema_validator.tex  class_generic_stream_wrapper.tex  (+296 more)
org.scrabble.gameLogic/: gameBoard.h
principal/: InterfazGrafica.pro  configurefile.cpp  configurefile.h  helloworld.h  (+35 more)
(+183 files in other folders)
